assets/stylesheets/global.css
@import url(../fonts/SourceSansPro.css);
@import url(../fonts/LeagueSpartan.css);

:root {
	--color-body: #333;
	--color-body-2: #888;
	--color-body-3: #ccc;
	--text-color-heading: #000;
	--bg-color: #eed;
	--bg-color-2: #fffff8;
	--bg-color-3: #fff;
	--color-primary: #383866;
	--color-primary-2: #55a;
	--color-primary-3: #99c;
	--border-radius: 0.5rem;
	--border-radius-2: 0.25rem;
}

body {
	margin: 0;
	color: var(--color-body);
	font-family: 'Source Sans Pro', sans-serif;
	background: var(--bg-color);
	position: relative;
	line-height: 1.6;
	font-size: 1rem;
	padding-top: 8rem;
	padding-bottom: 8rem;
}

@media (prefers-contrast: more) {
	body {
		color: #222;
	}
}

.wrapper {
	box-sizing: border-box;
	/* width: 100vw; */
	/* max-width: 100%; */
	text-align: center;
	/* overflow: auto; */
}


.wrapper ul {
	display: flex;
	justify-content: safe center;
	list-style: none;
}

.wrapper>ul {
	display: inline-flex;
	margin-inline: auto;
}

.wrapper ul li {
	display: inline-block;
	vertical-align: top;
}

/* MAKE-UP - Pure esthetics*/

/* ::-webkit-scrollbar {
	width: 5px;
	height: 5px;
}

::-webkit-scrollbar-thumb {
	background: black;
	border: 1px solid white;
	cursor: pointer;
}

::-webkit-scrollbar-track {
	background: white;
	width: calc(2px * 2);
	border: 2px solid rgba(26, 26, 26, 0);
}

::-webkit-scrollbar-track-piece {
	background: transparent;
	width: calc(2px / 2);
	border: 2px solid rgba(26, 26, 26, 0);
} */

/* @media (min-width: 480px) {
	:root {
		font-size: calc(0.75rem + ((1vw - 4.8px) * 0.5556));
	}
}

@media (min-width: 1920px) {
	:root {

	}
} */

.container {
	width: 30em;
	overflow-x: auto;
	white-space: nowrap;
}

/* THIS IS BAD BELOW */

ul,
li {
	/* position: relative; */
	display: inline-block;
	/* vertical-align: top; */
	box-sizing: border-box;
	margin: 0;
	padding: 0px;

}

#floatingRectangle {
	z-index: 1;
	position: fixed;
	left: 0;
	right: 1;
	bottom: 20px;
	height: 150px;
	background: rgba(76, 78, 175, 0.3);
	color: black;
	padding: 0px;
}

.message {
	position: absolute;
	right: 0.5vw;
	bottom: 1vw;
	max-width: 30vw;
	font-size: 0.75vmin;
	font-family: "Open Sans", sans-serif;
	color: white;
}

.message a {
	color: inherit;
	text-decoration: none;
	border-bottom: 1px solid #444;
}

.message a:hover {
	border-width: 3px;
}

.wrapper ul>li {
	padding-top: 1em;
	line-height: 1.5em;
	padding-inline: 0.5rem;
}

/* Draw a little indicator on top */

.wrapper ul>li::before {
	content: '';
	display: block;
	box-sizing: border-box;
	margin-inline: -0.5em;
	border: 0px solid gray;
	border-top-width: 1px;
}

.wrapper li .stem {
	content: '';
	display: block;
	margin-left: 50%;
	padding-top: 1rem;
	border-left: 1px solid gray;
}

.wrapper ul>li:first-of-type::before {
	margin-left: 50%;
	/* border-left-width: 1px; */
}

.wrapper ul>li:last-of-type::before {
	margin-right: 50%;
	/* border-right-width: 1px; */
}

.wrapper ul>li:only-of-type::before {
	/* border-left-width: 1px; */
	border-right-width: 0px;
	width: 0rem;
}

/* A vertical stem in the middle of each */

.wrapper ul::before {
	content: '';
	border-left: 1px solid gray;
	/* width: 100%; */
	display: block;
	position: absolute;
	padding-top: 1rem;
	box-sizing: border-box;
	margin-inline: -0.5em;
}

/* root element */
.wrapper>ul>li::before {
	display: none;
}
.wrapper>ul>li > .stem {
	display: none;
}
/* root element */
.wrapper>ul::before {
	display: none;
}


div.a {
	width: 100%;
	word-wrap: break-word;
}

.page-container {
	max-width: 60rem;
	margin: 0 auto;
	padding: 1rem;
}

.text-left {
	text-align: left;
}

.text-center {
	text-align: center;
}

div.x {
	padding-left: 180px;
	padding-right: 180px;
}

/* Button */

button,
input[type="button"],
.btn {
	background-color: var(--bg-color-2);
	border-radius: var(--border-radius);
	border: 1px solid;
	border-color: var(--color-body-2);
	color: var(--text-color-heading);
	display: inline-block;
	font-family: 'Questrial', sans-serif;
	font-size: 0.9rem;
	padding: 0.25rem 1ch;
	text-align: center;
	text-decoration: none;
}

button:hover,
input[type="button"]:hover,
.btn:hover {
	background-color: var(--bg-color-3);
}

button:active,
input[type="button"]:active,
.btn:active {
	background-color: var(--bg-color);
	border-color: var(--color-body-3);
}

.btn-primary {
	color: white;
	background-color: var(--color-primary-2);
	border-color: var(--color-primary);
}

.btn-primary:hover {
	opacity: 0.9;
	background-color: var(--color-primary-2);
	border-color: var(--color-primary);
}

.btn-primary:active {
	background-color: var(--color-primary);
	border-color: var(--color-primary-2);
}

/* Input elements */
input,
textarea,
select {
	padding: 0.5rem;
	font-size: 0.9rem;
	border-radius: 0.25rem;
	background-color: var(--bg-color-3);
}

input[readonly],
textarea[readonly],
select[readonly] {
	background-color: var(--bg-color);
}

/* The Modal (background) */
.modal {

	display: none;
	/* Hidden by default */
	position: fixed;
	/* Stay in place */
	z-index: 1;
	/* Sit on top */
	padding-top: 100px;
	/* Location of the box */
	left: 0;
	top: 0;
	width: 100%;
	/* Full width */
	height: 100%;
	/* Full height */
	overflow: auto;
	/* Enable scroll if needed */
	background-color: rgb(0, 0, 0);
	/* Fallback color */
	background-color: rgba(0, 0, 0, 0.4);
	/* Black w/ opacity */
}

/* Modal Content */
.modal-content-a {
	text-align: center;
	background-color: var(--bg-color-3);
	margin: auto;
	padding: 20px;
	border: 1px solid #888;
	width: 80%;
}

/* Modal Content */
.modal-content-b {
	text-align: left;
	background-color: #fefefe;
	margin: auto;
	padding: 20px;
	border: 1px solid #888;
	width: 80%;
}

/* The Close Button */
.close {
	color: #aaaaaa;
	float: right;
	font-size: 28px;
	font-weight: bold;
}

.close:hover,
.close:focus {
	color: #000;
	text-decoration: none;
	cursor: pointer;
}

/* Style the header with a grey background and some padding */
.header {
	overflow: hidden;
	background-color: grey;
	padding: 20px 10px;
}

/* Float the link section to the right */
.header-right {
	float: right;
}

.header-right {
	float: none;
}

footer {
	background-color: var(--color-primary);
	bottom: 0;
	position: absolute;
	box-sizing: border-box;
	color: white;
	font-size: small;
	padding: 0.5rem;
	z-index: 1;
	text-align: center;
	width: 100%;
}

.topnav {
	position: absolute;
	background-color: var(--color-primary);
	width: 100%;
	top: 0;
	left: 0;
	z-index: 1;
	padding-top: 1rem;
	text-align: center;
}

.topnav h1 {
	margin: 0;
}

.topnav a {
	display: inline-block;
	color: #fff;
	padding: 0.25rem 2rem;
	text-decoration: none;
}

.topnav a:hover {
	background-color: #FFF8;
	color: black;
}

.topnav a.active {
	background-color: #FFF2;
	color: white;
}

/* The Modal (background) */
.modal {

	display: none;
	/* Hidden by default */
	position: fixed;
	/* Stay in place */
	z-index: 10;
	/* Sit on top */
	padding-top: 100px;
	/* Location of the box */
	left: 0;
	top: 0;
	width: 100%;
	/* Full width */
	height: 100%;
	/* Full height */
	overflow: auto;
	/* Enable scroll if needed */
	background-color: rgb(0, 0, 0);
	/* Fallback color */
	background-color: rgba(0, 0, 0, 0.4);
	/* Black w/ opacity */
}

/* Modal Content */
.modal-content {
	background-color: #fff;
	margin: auto;
	padding: 1rem;
	border: 1px solid #888;
	width: 80%;
	position: relative;
}

/* The Close Button */
.close {
	color: #aaaaaa;
	font-size: 28px;
	font-weight: bold;
	position: absolute;
	right: 1rem;
}

.close:hover,
.close:focus {
	color: #000;
	text-decoration: none;
	cursor: pointer;
}

div.scroll {
	overflow: scroll;
	position: relative;
	/* width: 900px;
	height: 400px; */
}

#explain-element {
	border: 1px solid #ccc;
	display: none;
	margin-top: 10px;
	padding: 2px;
}

#some-div:hover #explain-element {
	display: block;
}

.notification {
	display: block;
	width: min-content;
	text-align: center;
	margin-inline: auto;
	background: rgba(76, 78, 175, 0.3);
	padding: 1rem;
	color: black;
}

/* Claim element */

.claim {
	position: relative;
	background-color: var(--bg-color-2);
	border: 1px solid var(--color-body-2);
	padding: 1rem 1rem;
	width: 8rem;
	white-space: normal;
	display: block;
	margin-inline: auto;
	cursor: pointer;
	transition: width 0.25s ease;
	overflow: hidden;
}

.claim:hover {
	background-color: var(--bg-color-3);
	border-color: var(--color-body-2);
}

.claim>* {
	margin-inline: auto;
	width: fit-content;
}

.claim img {
	display: block;
	width: 32px;
	height: 32px;
	object-fit: contain;
}

/* These checkboxes are used to toggle claim visibility */
.wrapper [type="radio"],
.wrapper [type="checkbox"] {
	display: none;
}

.claim_body {
	width: 18rem;
}

.claim .claim_body {
	transition: opacity 0.25s ease, margin 0.25s ease;
}

input:not(:checked)~.claim .claim_body,
input:not(:checked)~.claim .btn {
	display: block;
	opacity: 0;
	margin: 0;
	padding: 0;
	height: 0;
	line-height: 0;
	overflow: hidden;
}
:checked~.claim {
	width: 18rem;
}

p {
	margin-top: 0;
	margin-bottom: 0.5em;
}

.claim>*+* {
	margin-top: 0.25rem;
	margin-bottom: 0rem;
}

.icon,
.thesis {
	text-transform: uppercase;
	font-family: "League Spartan", sans-serif;
	color: var(--text-color-heading);
	font-size: 1.2em;
}

.thesis {
	color: unset;
	font-size: 1.8em;
}

.icon::after {
	display: inline-block;
	vertical-align: -0.08em;
	padding-left: 0.25em;
}

.icon--flag::after {
	content: url(../svg/flag.svg);
}

.icon--rivals {
	color: #c0e;
}

.icon--rivals::after {
	content: url(../svg/minimize-2.svg);
	rotate: 45deg;
}

.icon--support::after {
	content: url(../svg/thumbs-up.svg);
}

.icon--contested {
	color: #e00;
}

.icon--contested::after {
	content: url(../svg/alert.svg);
}

img.icon--rivals {
	width: 100px;
	height: auto;
}

/* Form */

form label {
	display: block;
	font-weight: bold;
	text-decoration: underline;
	margin-bottom: 0;
	margin-top: 1rem;
}

/* Utils */

.d-flex {
	display: flex;
}

.d-inline-block {
	display: inline-block;
}

.w-100 {
	width: 100% !important;
}

/* Classes for highlighting a section as subject/target/etc. */

.subject-display {
	color: red;
}

.target-display {
	color: blue;
}

.reason-display {
	color: orange;
}

.example-display {
	color: purple;
}

.subject-display::after {
	content: '(subject)';
	vertical-align: super;
	font-size: smaller;
}

.target-display::after {
	content: '(target property)';
	vertical-align: super;
	font-size: smaller;
}

.reason-display::after {
	content: '(reason)';
	vertical-align: super;
	font-size: smaller;
}

.example-display::after {
	content: '(example)';
	vertical-align: super;
	font-size: smaller;
}

